--- a/examples/05_simulation_campaign.ipynb
+++ b/examples/05_simulation_campaign.ipynb
@@ -18,8 +18,8 @@
     "    virtual_lab_id=\"a98b7abc-fc46-4700-9e3d-37137812c730\",\n",
     "    project_id=\"0dbced5f-cc3d-488a-8c7f-cfb8ea039dc6\",\n",
     ")\n",
-    "client = Client(api_url=entitycore_api_url, project_context=project_context)\n",
-    "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")"
+    "token = os.getenv(\"ACCESS_TOKEN\", \"XXX\")\n",
+    "client = Client(api_url=entitycore_api_url, project_context=project_context, token_manager=token)"
    ]
   },
   {
@@ -38,9 +38,9 @@
    "outputs": [],
    "source": [
     "campaign = models.SimulationCampaign(\n",
-    "    name=\"my-campaign\", description=\"my-campaign-description\", scan_parameters={\"foo\", \"bar\"}\n",
+    "    name=\"my-campaign\", description=\"my-campaign-description\", scan_parameters={\"foo\": \"bar\"}\n",
     ")\n",
-    "campaign = client.register_entity(campaign, token=token)"
+    "campaign = client.register_entity(campaign)"
    ]
   },
   {
@@ -59,17 +59,15 @@
    "outputs": [],
    "source": [
     "species = client.search_entity(\n",
-    "    entity_type=models.Species, token=token, query={\"name__ilike\": \"Mus musculus\"}\n",
+    "    entity_type=models.Species, query={\"name__ilike\": \"Mus musculus\"}\n",
     ").first()\n",
     "\n",
     "subject = models.Subject(\n",
     "    name=\"my-subject\", description=\"my-subject-description\", sex=\"male\", species=species\n",
     ")\n",
-    "subject = client.register_entity(subject, token=token)\n",
+    "subject = client.register_entity(subject)\n",
     "\n",
-    "brain_region = client.search_entity(\n",
-    "    entity_type=models.BrainRegion, token=token, query={\"acronym\": \"CB\"}\n",
-    ").first()\n",
+    "brain_region = client.search_entity(entity_type=models.BrainRegion, query={\"acronym\": \"CB\"}).first()\n",
     "\n",
     "\n",
     "circuit = models.Circuit(\n",
@@ -84,7 +82,7 @@
     "    build_category=\"em_reconstruction\",\n",
     ")\n",
     "\n",
-    "circuit = client.register_entity(circuit, token=token)"
+    "circuit = client.register_entity(circuit)"
    ]
   },
   {
@@ -110,7 +108,7 @@
     "        entity_id=circuit.id,\n",
     "        simulation_campaign_id=campaign.id,\n",
     "    )\n",
-    "    client.register_entity(simulation, token=token)"
+    "    client.register_entity(simulation)"
    ]
   },
   {
@@ -128,9 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "campaign = client.get_entity(\n",
-    "    entity_id=campaign.id, entity_type=models.SimulationCampaign, token=token\n",
-    ")"
+    "campaign = client.get_entity(entity_id=campaign.id, entity_type=models.SimulationCampaign)"
    ]
   },
   {
