--- a/examples/04_simulation_campaign.ipynb
+++ b/examples/04_simulation_campaign.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "from datetime import UTC, datetime\n",
     "\n",
     "from rich import print as rprint\n",
     "\n",
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "490dd2a8-e9a1-442e-abe2-cfda8b3c0c8f",
+   "id": "2e29f4cb-28ae-447a-8ac2-bc319f2d33b8",
    "metadata": {},
    "source": [
     "## Register a Circuit"
@@ -33,13 +34,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6688fcf5-bd74-4c3f-ac13-cddf5374cf3f",
+   "id": "5d5d04b1-59be-44a9-a283-2856783768f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "species = client.search_entity(\n",
-    "    entity_type=models.Species, query={\"name__ilike\": \"Mus musculus\"}\n",
-    ").first()\n",
+    "    entity_type=models.Species, query={\"name__ilike\": \"Homo sapiens\"}\n",
+    ").one()\n",
     "\n",
     "subject = models.Subject(\n",
     "    name=\"my-subject\", description=\"my-subject-description\", sex=\"male\", species=species\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47679bbe-5550-4332-b5a6-0b0a916a0acc",
+   "id": "eb0132f6-88e4-4700-a2b7-799bb0ee77e6",
    "metadata": {},
    "source": [
     "## Register a SimulationCampaign"
@@ -75,17 +76,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "520976c2-4575-4455-9d64-ed666f661550",
+   "id": "ed03bf00-51da-43eb-b887-8d0502c404c6",
    "metadata": {},
    "outputs": [],
    "source": [
     "campaign = models.SimulationCampaign(\n",
     "    name=\"my-campaign\",\n",
     "    description=\"my-campaign-description\",\n",
-    "    scan_parameters={\"foo\": \"bar\"},\n",
     "    entity_id=circuit.id,\n",
+    "    scan_parameters={\"foo\": \"bar\"},\n",
     ")\n",
     "campaign = client.register_entity(campaign)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "379201b4-39fd-4c0c-ac51-bc6bc2a976cb",
+   "metadata": {},
+   "source": [
+    "## Register SimulationGeneration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "279f388c-968d-4a4f-bdf5-34612bce6440",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sim_generation = models.SimulationGeneration(\n",
+    "    start_time=datetime.now(UTC),\n",
+    "    used=[campaign],\n",
+    ")\n",
+    "sim_generation = client.register_entity(sim_generation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7de56b6-d831-41e5-8215-f91d13dff829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(sim_generation)"
    ]
   },
   {
@@ -103,15 +136,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(5):\n",
-    "    simulation = models.Simulation(\n",
-    "        name=f\"sim-{i}\",\n",
-    "        description=f\"sim-{i}\",\n",
-    "        scan_parameters={\"foo\": \"bar\"},\n",
-    "        entity_id=circuit.id,\n",
-    "        simulation_campaign_id=campaign.id,\n",
+    "simulations = [\n",
+    "    client.register_entity(\n",
+    "        models.Simulation(\n",
+    "            name=f\"sim-{i}\",\n",
+    "            description=f\"sim-{i}\",\n",
+    "            scan_parameters={\"foo\": \"bar\"},\n",
+    "            entity_id=circuit.id,\n",
+    "            simulation_campaign_id=campaign.id,\n",
+    "        )\n",
     "    )\n",
-    "    client.register_entity(simulation)"
+    "    for i in range(5)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "847511de-60a7-4c37-aeae-9eba5ee50f8a",
+   "metadata": {},
+   "source": [
+    "## Update SimulationGeneration with generated activities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f113473-4af1-4824-9102-f64e6ddc779d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_to_update = {\n",
+    "    \"generated_ids\": [s.id for s in simulations],\n",
+    "    \"end_time\": datetime.now(UTC),\n",
+    "}\n",
+    "\n",
+    "updated_sim_generation = client.update_entity(\n",
+    "    entity_id=sim_generation.id, entity_type=type(sim_generation), attrs_or_entity=data_to_update\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29ee7fc8-da7a-4a05-af19-5032865e7246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(updated_sim_generation)"
    ]
   },
   {
@@ -119,7 +190,7 @@
    "id": "027b5f7a-5191-4785-9e45-616a8c1a93da",
    "metadata": {},
    "source": [
-    "## Fetch SimulationCampaign"
+    "## Create simulation executions"
    ]
   },
   {
@@ -129,17 +200,76 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "campaign = client.get_entity(entity_id=campaign.id, entity_type=models.SimulationCampaign)"
+    "executions = [\n",
+    "    client.register_entity(\n",
+    "        models.SimulationExecution(\n",
+    "            used=[simulations[i]],\n",
+    "            start_time=datetime.now(UTC),\n",
+    "            status=\"created\",\n",
+    "        )\n",
+    "    )\n",
+    "    for i in range(5)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ffccf17-1429-4538-bec0-21e9cc444a95",
+   "metadata": {},
+   "source": [
+    "## Create simulation results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c82ddddb-96c0-4c7c-a156-eca203735837",
+   "id": "b74fab6e-be66-4c0a-bd0d-da4ecdcabed3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprint(campaign.simulations)"
+    "results = [\n",
+    "    client.register_entity(models.SimulationResult(name=f\"result-{i}\", description=f\"result-{i}\"))\n",
+    "    for i in range(5)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77819c3b-a111-4c62-bf07-a66a1801b69f",
+   "metadata": {},
+   "source": [
+    "## Update simulation executions with results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ee592a1-06a5-4593-bb00-84ea40e956e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "updated_executions = [\n",
+    "    client.update_entity(\n",
+    "        entity_id=executions[i].id,\n",
+    "        entity_type=models.SimulationExecution,\n",
+    "        attrs_or_entity={\n",
+    "            \"generated_ids\": [results[i].id],\n",
+    "            \"end_time\": datetime.now(UTC),\n",
+    "            \"status\": \"done\",\n",
+    "        },\n",
+    "    )\n",
+    "    for i in range(5)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98d1320a-fdcb-4d4a-ae25-faac8d7676b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rprint(updated_executions)"
    ]
   },
   {
